--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+
 body {
     background: lightblue;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
 }
